# kahl-dev-claude-marketplace

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/: beyond-mcp.md  contributing.md
plugins/homeassistant/: README.md
plugins/homeassistant/.claude-plugin/: plugin.json
plugins/homeassistant/docs/: ha-install-types.md  installation.md  ssh-setup.md  workflow.md
plugins/homeassistant/examples/: .env.example
plugins/homeassistant/skills/homeassistant/: SKILL.md
plugins/homeassistant/skills/homeassistant/scripts/: activate-scene.py  automation-health.py  call-service.py  check-config.py  check-reload.py  create-automation.py  delete-dashboard.py  delete-entity.py  deploy-config.py  fire-event.py  get-config.py  get-dashboard.py  get-history.py  get-logbook.py  get-state.py  get-system-log.py  get-trace.py  init-config.py  list-areas.py  list-automations.py  list-backups.py  list-categories.py  list-dashboards.py  list-devices.py  list-entities.py  list-floors.py  list-integrations.py  list-labels.py  list-repairs.py  list-scenes.py  list-scripts.py  list-traces.py  manage-areas.py  manage-backups.py  manage-categories.py  manage-floors.py  manage-helpers.py  manage-integrations.py  manage-labels.py  manage-persons.py  (+15 more)
scripts/: bump-version.sh  install-local.sh  symlink-skills.sh
