[project]
name = "kahl-dev-claude-marketplace"
version = "1.0.0"
description = "Claude Code plugin marketplace - Home Assistant and more"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

# Include all Python scripts in plugins
include = ["plugins/**/*.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes (unused imports, undefined names)
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "UP",     # pyupgrade (modern Python syntax)
    "C4",     # flake8-comprehensions
]

# Per-file ignores for UV CLI scripts
[tool.ruff.lint.per-file-ignores]
"plugins/**/*.py" = [
    "E402",    # late imports common after # /// script block
    "E501",    # long lines in Click help strings
]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
]
